--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.40.8
+version: 1.40.9
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -210,6 +210,9 @@ commands:
   clearchat:
     description: Clear Chat Command
     usage: Incorrect format! Please use /clearchat
+  sendwarp:
+    description: Send Warp Command
+    usage: Incorrect format! Please use /clearchat
 permissions:
   se.all:
     description: "Gives access to all commands."
@@ -276,6 +279,8 @@ permissions:
       se.report: true
       se.reportnotification: true
       se.clearchat: true
+      se.warps.all: true
+      se.sendwarp: true
   se.reload:
     description: "Gives access to the /se reload command."
     default: false
@@ -458,4 +463,10 @@ permissions:
     default: false
   se.clearchat:
     description: "Clear Chat Command"
+    default: false
+  se.warps.all:
+    description: "All Warps Permission"
+    default: false
+  se.sendwarp:
+    description: "Send Warp Command"
     default: false
