--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.50.0
+# This config was generated for version 1.50.1
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -120,6 +120,8 @@ group-id: ""
 # +              Server Essentials (Warp)                + #
 # +------------------------------------------------------+ #
 ############################################################
+# Enable or Disable the Warp GUI
+enable-warp-gui: true
 # Determine the amount of slots inside the Warp GUI
 warp-gui-size: 9
 # Change the Item that shows for Warps in the Warp GUI
@@ -132,6 +134,8 @@ warp-name-colour: "&a"
 # +              Server Essentials (Home)                + #
 # +------------------------------------------------------+ #
 ############################################################
+# Enable or Disable the Home GUI
+enable-home-gui: true
 # Determine the amount of slots inside the Home GUI
 home-gui-size: 9
 # Change the Item that shows for Homes in the Home GUI
