--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.50.4
+version: 1.50.5
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -214,6 +214,9 @@ commands:
   sendwarp:
     description: Send Warp Command
     usage: Incorrect format! Please use /clearchat
+  socialspy:
+    description: Social Spy Command
+    usage: Incorrect format! Please use /socialspy
 permissions:
   se.all:
     description: "Gives access to all commands."
