--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.50.7
+# This config was generated for version 1.50.8
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -83,6 +83,9 @@ broadcast-messages:
 # Ticks Between Each Message
 # 20 Ticks = 1 Second
 broadcast-delay: 1000
+# Change the Minimum Amount Of Players Online for the Broadcast System to run
+# Can be useful to reduce spamming console with no one online
+broadcast-min-players: 1
 ############################################################
 # +------------------------------------------------------+ #
 # +              Server Essentials (MOTD)                + #
